fix for ejs (github pages breaks on it)

--- a/course/course.css
+++ b/course/course.css
@@ -68,4 +68,8 @@
   color: #444;
   padding: 5px;
 }
+
+.small_font{
+  font-size: 60%;
+}
   
